--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -5,6 +5,7 @@
         <th>Id</th>
         <th>Name</th>
         <th>User Name</th>
+        <th>Role</th>
         <th>Email</th>
         <th>Phone</th>
         <th>Website</th>
@@ -15,6 +16,7 @@
         <td>{{user.id}}</td>
         <td>{{user.name}}</td>
         <td>{{user.username}}</td>
+        <td> {{user.isAdmin}}</td>
         <td> {{user.email}}</td>
         <td>{{user.phone}}</td>
         <td>{{user.website}}</td>
